k8s/00-namespace.yaml
# Un "namespace" es como una carpeta dentro del cluster de Kubernetes
# para mantener todos los recursos de este proyecto agrupados y aislados.
apiVersion: v1
kind: Namespace
metadata:
  name: taskapp
