k8s/01-postgres.yaml
# --- Deployment: define COMO correr el contenedor de Postgres ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: taskapp
spec:
  replicas: 1
  selector:
    matchLabels: { app: postgres }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports: [{ containerPort: 5432 }]
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim: { claimName: postgres-pvc }
---
# --- Service: la "direccion interna" para que el backend encuentre a Postgres ---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: taskapp
spec:
  selector: { app: postgres }
  ports:
    - port: 5432
      targetPort: 5432
